--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "respect/validation": "^1.1",
         "slim/csrf": "^0.8.1",
         "slim/flash": "^0.2.0",
-        "cakephp/orm": "^3.4"
+        "cakephp/orm": "^3.4",
+        "vlucas/phpdotenv": "^3.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
